Fixed Center Aligned Text & Added Footer Styling

--- a/3. BNA/bna.css
+++ b/3. BNA/bna.css
@@ -71,6 +71,7 @@ body #fullSidebar #fullNavbar {
 }
 /*Footer*/
 #footer {
+  font-size: 15px;
   background-color: #bbbbbb;
-  color: #a8a8a8;
+  color: #515150;
 }
